fix h1 display on ios

--- a/app/style/YAPMS.css
+++ b/app/style/YAPMS.css
@@ -1046,6 +1046,7 @@ a {
 	display: flex;
 	flex-direction: row;
 	margin-top: 6px;
+	min-height: 1.75em;
 }
 
 .sidebar-button {
@@ -1091,7 +1092,6 @@ a {
 .sidebar-box h3 {
 	margin: 5px;
 	padding: 0px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .sidebar-tool-button {
